# emberkeep

./: .gitattributes  .gitignore  .gitmodules  EmberKeep_Project_Spec.md  README.md
Assets/EmberKeep/AI/: Day1Test.cs  LiveOpsConfig.cs  LlamaCppBridge.cs  LlmService.cs  MerchantPersonality.cs  NpcMemoryStore.cs  NpcPersonality.cs  SafetyFilter.cs  StorytellerPersonality.cs  Telemetry.cs
Assets/EmberKeep/BehaviorTrees/: Blackboard.cs  BtNode.cs
Assets/EmberKeep/Editor/: BuildTavernScene.cs  Day4BtSmokeTest.cs  GenerateNpcWindow.cs  TelemetryDashboard.cs
Assets/EmberKeep/Game/: DialogueController.cs  FpsOverlay.cs  MerchantBrain.cs  MerchantNpc.cs  Npc.cs  PlayerController.cs  StorytellerNpc.cs
Assets/EmberKeep/ScriptableObjects/NPCs/: Bram.asset  Finn.asset  Gorvoth__Blackhook__Grimstone.asset  Grimgold_Ironfist.asset  Griswold__Grit__Blackwood.asset  Kao.asset  Mira.asset  Rashid_s_Rare_Spices.asset
Assets/Scenes/: SampleScene.unity
Models/: README.md
Native/: CMakeLists.txt  README.md
Native/emberkeep_native/include/: emberkeep_native.h
Native/emberkeep_native/src/: emberkeep_native.cpp
ProjectSettings/: ProjectSettings.asset
docs/: architecture.md  demo_video_production_guide.md  demo_video_shotlist.md  lessons_learned.md  resume_bullet.md  technical_writeup.md  telemetry_schema.md
docs/perf/: CAPTURE_INSTRUCTIONS.md  dashboard_screenshot_instructions.md  sample_telemetry.jsonl  tok_per_sec.txt
